--- a/assets/css/templatemo-softy-pinko.css
+++ b/assets/css/templatemo-softy-pinko.css
@@ -567,7 +567,7 @@ header
 }
 
 .header-area.header-sticky .nav {
-  margin-top: 20px !important;
+  margin: 20px !important;
 }
 
 .header-area.header-sticky .nav li a {
@@ -579,12 +579,17 @@ header
 }
 
 @media (max-width: 1200px) {
+
   .header-area .main-nav .nav li {
+    padding-top: 5px;
+    padding-bottom: 5px;
     padding-left: 12px;
     padding-right: 12px;
   }
   .header-area .main-nav:before {
+    border-radius: 5px;
     display: none;
+    height: 1px;
   }
 }
 
@@ -595,15 +600,19 @@ header
     box-shadow: none;
     text-align: center;
   }
+
   .header-area .container {
-    padding: 0px;
+    border-radius: 1px;
   }
   .header-area .logo {
-    margin-top: 27px !important;
-    margin-left: 30px;
+    width: 2%;
+    margin-bottom: -200px;
   }
   .header-area .menu-trigger {
     display: block !important;
+  }
+  .header-area .main-nav:before {
+    display: none;
   }
   .header-area .main-nav {
     overflow: hidden;
@@ -623,6 +632,7 @@ header
     border-top: 1px solid #eee;
   }
   .header-area .main-nav .nav li {
+    display: inline-block;
     width: 100%;
     background: #fff;
     border-bottom: 1px solid #eee;
