--- a/assets/css/templatemo-softy-pinko.css
+++ b/assets/css/templatemo-softy-pinko.css
@@ -402,10 +402,10 @@ header
 }
 
 .header-area .main-nav {
+  background-color: white;
   box-shadow: 0px 0px 15px rgba(0,0,0,0.1);
   border-radius: 40px;
   min-height: 80px;
-  background: #fff;
 }
 
 
@@ -445,13 +445,13 @@ header
 }
 
 .header-area .main-nav .nav li:last-child {
-  padding-right: 0px;
+  padding-right: 20px;
 }
 
 .header-area .main-nav .nav li a {
   display: block;
   font-weight: 500;
-  font-size: 13px;
+  font-size: 16px;
   color: #fff;
   -webkit-transition: all 0.3s ease 0s;
   -moz-transition: all 0.3s ease 0s;
@@ -580,6 +580,9 @@ header
 
 @media (max-width: 1200px) {
 
+  .header-area .main-nav .nav li a {
+    font-size: 13px;
+  }
   .header-area .main-nav .nav li {
     padding-top: 5px;
     padding-bottom: 5px;
@@ -593,7 +596,7 @@ header
   }
 }
 
-@media (max-width: 991px) {
+@media (max-width: 961px) {
   .header-area {
     padding: 0px 15px;
     height: 80px;
@@ -669,7 +672,7 @@ welcome
   display: flex;
   align-items: center;
   justify-content: center;
-  background-image: url(../images/image.png);
+  background-image: url(../images/abstract.png);
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover; 
@@ -869,7 +872,7 @@ features
   z-index: 9;
 }
 .image-box {
-  background-color: #ee7ead; /* Set your desired background color here */
+  background-color:  #ff589e; /* Set your desired background color here */
   padding: 20px;             /* Add padding to create spacing around the image */
   text-align: center;        /* Center the image horizontally */
   border-radius: 10px;       /* Optional: add rounded corners to the box */
@@ -938,7 +941,7 @@ parallax & home seperator
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
-  background-image: url(../images/image.png);
+  background-image: url(../images/abstract.png);
   z-index: 2;
   top: -20%;
   left: -20%;
@@ -1061,7 +1064,7 @@ parallax & home seperator
   width: 140%;
   height: 140%;
   opacity: .90;
-  background-image: url(../images/image.png);
+  background-image: url(../images/abstract.png);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
@@ -1524,7 +1527,7 @@ footer
 --------------------------------------------- 
 */
 footer {
-  background-image: url(../images/image.png);
+  background-image: url(../images/abstract.png);
   padding-top: 30px;
 }
 
